...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login-->
        <scene sceneID="r80-Zp-Bd2">
            <objects>
                <tableViewController storyboardIdentifier="Login" title="Login" id="kmy-Sz-z5R" customClass="LoginReduxViewController" customModule="iOS_Boilerplate" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="LIV-OD-2sf">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <sections>
                            <tableViewSection headerTitle="Enter username and password" id="rqb-j4-iRh">
...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7GH-Xt-g4B">
                                                    <rect key="frame" x="16" y="6" width="343" height="30"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <state key="normal" title="Sign in"/>
                                                    <connections>
                                                        <action selector="doSignIn" destination="kmy-Sz-z5R" eventType="touchUpInside" id="XMV-zm-rtD"/>
                                                    </connections>
                                                </button>
                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="pLX-iZ-4cP">
                                                    <rect key="frame" x="177" y="13" width="20" height="20"/>
...
