...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Vpc-OB-a2y" id="oay-Fe-gim"/>
                            <outlet property="delegate" destination="Vpc-OB-a2y" id="ehx-O1-vz6"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Root View Controller" id="9OI-Od-Otn">
                        <rightBarButtonItems>
                            <barButtonItem title="Item" id="mSj-jo-xol">
                                <imageReference key="image" image="info.circle" catalog="system" symbolScale="default"/>
                                <connections>
                                    <action selector="infoButtonPressed:" destination="Vpc-OB-a2y" id="cyA-EH-FWK"/>
                                </connections>
...
