...

class ViewController: CDArchTableViewController {
    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view, typically from a nib.
        navigationItem.leftBarButtonItem = editButtonItem
        editButtonItem.accessibilityIdentifier = "EditButtonId"

        let addButton = UIBarButtonItem(barButtonSystemItem: .add,
                                        target: self,
                                        action: #selector(insertNewObject(_:)))
        addButton.accessibilityIdentifier = "AddButtonId"
        navigationItem.rightBarButtonItems?.append(addButton)
    }

    @IBAction private func loginButtonTapped(_ sender: UIBarButtonItem) {
        LoginRouter.showLogin(over: self)
    }
...
